--- a/Components/Cart/Cart.css
+++ b/Components/Cart/Cart.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap");
+
 .cart {
   width: 30vw;
   position: fixed;
@@ -30,45 +32,46 @@
   padding: 5px;
 }
 .cart-row {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
-.cart-header{
-    font-size:1.2rem;
-    font-weight: bold;
+.cart-header {
+  font-size: 1.2rem;
+  font-weight: bold;
 }
 
-.cart-item{
-    flex: 85%;
-    padding-left: 20px;
+.cart-item {
+  flex: 85%;
+  padding-left: 30px;
+  font-family: "Times New Roman", Times, serif;
 }
-.cart-price{
-    flex: 30%;
+.cart-price {
+  flex: 30%;
+  font-family: "Times New Roman", Times, serif;
 }
-.cart-quantity{
-    flex: 10%;
-    padding-right: 10px;
+.cart-quantity {
+  flex: 10%;
+  padding-right: 10px;
+  font-family: "Times New Roman", Times, serif;
 }
 .cart-column {
   display: flex;
   align-items: center;
   border-bottom: 1px solid black;
-  margin-right: 1.em;
+  margin-right: 1rem;
   padding-bottom: 10px;
   margin-top: 10px;
- 
 }
 
-.cart-quantity input{
-    width:40px;
-    height:30px;
-    border:1px solid rgb(0, 204, 255) ;
-    border-radius:8%;
-    outline:none;
-    text-align:center;
-    margin-right:20px;
+.cart-quantity input {
+  width: 40px;
+  height: 30px;
+  border: 1px solid rgb(0, 204, 255);
+  border-radius: 8%;
+  outline: none;
+  text-align: center;
+  margin-right: 20px;
 }
-
 
 .cart-total {
   display: flex;
@@ -76,27 +79,27 @@
   font-size: 1.2rem;
   margin: 20px;
 }
-.cart-total .total-title{
-    margin-right:10px;
-    font-size:1.5rem;
+.cart-total .total-title {
+  margin-right: 10px;
+  font-size: 1.5rem;
 }
-.purchase-btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin:auto;
-    margin-top: 50px;
-    background: #56CCF2;
-    color:white;
-    font-size:1.2rem;
-    font-weight: bold;
-    border:none;
-    border-radius:8%;
-    padding:12px;
-    cursor: pointer;
+.purchase-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  margin-top: 50px;
+  background: #56ccf2;
+  color: white;
+  font-size: 1.2rem;
+  font-weight: bold;
+  border: none;
+  border-radius: 8%;
+  padding: 12px;
+  cursor: pointer;
 }
-.purchase-btn:hover{
-    background-color:#18acdd;
+.purchase-btn:hover {
+  background-color: #18acdd;
 }
 
 /* cart{
