--- a/Components/Cart/CartItems.css
+++ b/Components/Cart/CartItems.css
@@ -5,17 +5,16 @@
    padding: 10px 0.7px;
 }
 
+.cartitems-row {
+    display: flex;
+}
+
+
 .cart-item {
     flex: 30%;
     padding-left: 20px;
     justify-content: space-around;
 }
-.cartitems-row {
-    display: flex;
-    justify-content: space-between;
-}
-
-
 .cart-column {
     display: flex;
     align-items: center;
@@ -34,15 +33,14 @@
     
    
 }
-.img{
+.cartimg{
     width: 70px;
-    display: inline-block;
     margin-right:7px;
+    border-radius: 10px;
    
 }
 .remove-button{
     color:white;
-    font-weight: bold;
     background: rgb(231, 76, 76);
     cursor: pointer;
     border:none;
