--- a/Pages/Index.css
+++ b/Pages/Index.css
@@ -1,10 +1,16 @@
 .footer {
-  background: #56CCF2;
+  background: #56ccf2;
   text-align: left;
   color: white;
   padding: 30px;
   padding-left: 100px;
   font-size: larger;
-
 }
-    
+.home-button {
+  border-radius: 10px;
+  font-size: 30px;
+  background-color: transparent;
+  color: white;
+  border-color: #56ccf2;
+  margin-top: 10px;
+}
