--- a/Pages/Index.css
+++ b/Pages/Index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Metal+Mania&display=swap');
 .footer {
   background: #56ccf2;
   text-align: left;
@@ -7,10 +8,51 @@
   font-size: larger;
 }
 .home-button {
-  border-radius: 10px;
-  font-size: 30px;
-  background-color: transparent;
+  border: 1px solid #56CCF2;
+  padding: 15px 30px;
+  font-size: 23px;
+  font-weight: 200;
+  margin: 10px auto;
+  background: inherit;
+  cursor: pointer;
   color: white;
-  border-color: #56ccf2;
-  margin-top: 10px;
+ 
+}
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px 30px;
+}
+.home-item {
+  display: flex;
+  border-bottom: 1px solid black;
+  padding: 10px;
+  font-size: medium;
+}
+.home-item .home-date {
+  width: 12%;
+}
+.home-item .home-place {
+  width: 25%;
+  color: #777;
+}
+.home-item .home-area {
+  width: 53%;
+  color: #777;
+}
+.home-item .buy-button {
+  width: 20%;
+  background: #56ccf2;
+  color: white;
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  font-weight: 700;
+  font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+}
+.hometitle {
+  font-family: "Metal Mania";
+  text-align: center;
+  padding: 20px;
+  font-size: 30px;
 }
