--- a/Pages/Contact.css
+++ b/Pages/Contact.css
@@ -7,13 +7,11 @@
 }
 .container {
   max-width: 700;
-  /* margin: 0 auto; */
+  margin: 0 auto;
   font-size: 22px;
-  margin: 20px auto;
+ 
   background-color: whitesmoke;
-  border-radius: 2px solid black;
-  border-radius: 5px;
-  
+  border-radius: 5px solid black;
   width: 75%;
 }
 .formdetails label {
